--- a/TTerm/ConfigFrames/frameCfgPantTerm.lfm
+++ b/TTerm/ConfigFrames/frameCfgPantTerm.lfm
@@ -4,95 +4,66 @@ inherited fraPantTerm: TfraPantTerm
   DesignLeft = 264
   DesignTop = 238
   object txtMaxLinT: TEdit[0]
-    Left = 184
+    Left = 168
     Height = 23
-    Top = 96
+    Top = 40
     Width = 56
     TabOrder = 0
   end
   object Label1: TLabel[1]
-    Left = 32
-    Height = 15
-    Top = 96
-    Width = 118
-    Caption = 'Máximo Núm. Líneas :'
-    ParentColor = False
-  end
-  object ComboBox1: TComboBox[2]
-    Left = 184
-    Height = 23
-    Top = 16
-    Width = 60
-    Enabled = False
-    ItemHeight = 15
-    ItemIndex = 0
-    Items.Strings = (
-      'VT100'
-    )
-    TabOrder = 1
-    Text = 'VT100'
-  end
-  object ComboBox2: TComboBox[3]
-    Left = 184
-    Height = 23
-    Top = 40
-    Width = 60
-    Enabled = False
-    ItemHeight = 15
-    ItemIndex = 0
-    Items.Strings = (
-      '80*25'
-    )
-    TabOrder = 2
-    Text = '80*25'
-  end
-  object Label2: TLabel[4]
-    Left = 32
-    Height = 15
-    Top = 16
-    Width = 90
-    Caption = 'Tipo de terminal:'
-    Enabled = False
-    ParentColor = False
-  end
-  object Label3: TLabel[5]
-    Left = 32
+    Left = 16
     Height = 15
     Top = 40
-    Width = 110
-    Caption = 'Tamaño de terminal:'
-    Enabled = False
+    Width = 58
+    Caption = 'Max Lines :'
     ParentColor = False
   end
-  object Label4: TLabel[6]
-    Left = 32
+  object Label4: TLabel[2]
+    Left = 16
     Height = 15
-    Top = 72
-    Width = 136
-    Caption = 'Máximo Núm. Columnas:'
+    Top = 16
+    Width = 76
+    Caption = 'Max Columns:'
     ParentColor = False
   end
-  object txtMaxColT: TEdit[7]
-    Left = 184
+  object txtMaxColT: TEdit[3]
+    Left = 168
     Height = 23
-    Top = 72
+    Top = 16
     Width = 56
+    TabOrder = 1
+  end
+  object chkInterDirec: TCheckBox[4]
+    Left = 16
+    Height = 19
+    Top = 72
+    Width = 162
+    Caption = '&Intercepts directionals keys'
+    TabOrder = 2
+  end
+  object chkCurSigPrmpt: TCheckBox[5]
+    Left = 16
+    Height = 19
+    Top = 104
+    Width = 189
+    Caption = 'Terminal Cursor &follows Prompt'
     TabOrder = 3
   end
-  object chkInterDirec: TCheckBox[8]
-    Left = 32
-    Height = 19
-    Top = 128
-    Width = 182
-    Caption = '&Interceptar teclas direccionales'
+  object edTpoMax: TEdit[6]
+    Left = 176
+    Height = 23
+    Top = 144
+    Width = 56
+    Alignment = taRightJustify
     TabOrder = 4
+    Text = 'edTpoMax'
   end
-  object chkCurSigPrmpt: TCheckBox[9]
-    Left = 32
-    Height = 19
-    Top = 160
-    Width = 204
-    Caption = 'Cursor de Terminal sigue a Prompt'
-    TabOrder = 5
+  object Label2: TLabel[7]
+    Left = 16
+    Height = 15
+    Top = 148
+    Width = 139
+    Caption = 'Macro Timeout. (seconds)'
+    ParentColor = False
   end
 end
