--- a/TTerm/FormPrincipal.lfm
+++ b/TTerm/FormPrincipal.lfm
@@ -540,6 +540,9 @@ object frmPrincipal: TfrmPrincipal
       MouseActions = <>
       MouseTextActions = <>
       MouseSelActions = <>
+      Lines.Strings = (
+        'sudo -S ls'
+      )
       VisibleSpecialChars = [vscSpace, vscTabAtLast]
       SelectedColor.BackPriority = 50
       SelectedColor.ForePriority = 50
@@ -1602,6 +1605,42 @@ object frmPrincipal: TfrmPrincipal
       Caption = '&Herramientas'
       object MenuItem1: TMenuItem
         Caption = 'Editor de &Macros'
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00C6A18CFFC38E
+          68FFC08B66FFBE8864FFBB8561FFB9835FFFB47E5CFFB27C5AFFB17B58FFAE79
+          57FFAD7656FFAB7554FFA97353FFA97151FFC6A18CFFFFFFFF00C8926CFFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA97251FFFFFFFF00CA946EFFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFAA7353FFFFFFFF00CC976FFFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFAC7554FFFFFFFF00D19C73FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFB07A58FFFFFFFF00D49E75FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFB27C5AFFFFFFFF00D5A076FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFB57E5CFFFFFFFF00D8A279FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFB7815EFFFFFFFF00D9A379FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFBA8560FFFFFFFF00DBA47AFFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5
+          E2FFA9F5E2FFA9F5E2FFA9F5E2FFA9F5E2FFBD8763FFFFFFFF00DCA77BFFDCA7
+          7BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA7
+          7BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFC08B66FFFFFFFF00DDAD86FFE8B9
+          92FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B9
+          92FFE8B992FFE8B992FFE8B992FFE8B992FFC19170FFFFFFFF00DBC3B6FFDEB4
+          92FFDCA77BFFDCA67AFFDAA47AFFD8A279FFD5A076FFD49E75FFD29D73FFCF9A
+          72FFCE9970FFCB966FFFC9946CFFC79E80FFDBC3B6FFFFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+        }
         Hint = 'Ver Editor de Macros'
         ImageIndex = 34
       end
