--- a/TTerm/FormPrincipal.lfm
+++ b/TTerm/FormPrincipal.lfm
@@ -643,7 +643,7 @@ object frmPrincipal: TfrmPrincipal
       object ToolButton20: TToolButton
         Left = 93
         Top = 2
-        Action = AcTerConfig
+        Action = AcHerCfg
       end
     end
     inline edTerm: TSynEdit
@@ -1401,7 +1401,7 @@ object frmPrincipal: TfrmPrincipal
         }
       end
       object mnTerSend: TMenuItem
-        Caption = '&Enviar'
+        Caption = '&Send'
         object MenuItem68: TMenuItem
           Action = AcTerEnvCtrlC
           Bitmap.Data = {
@@ -1440,46 +1440,6 @@ object frmPrincipal: TfrmPrincipal
             FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
             FF00FFFFFF00FFFFFF006360F80AFFFFFF00FFFFFF00FFFFFF00
           }
-        end
-        object MenuItem69: TMenuItem
-          Caption = 'Enviar &Enter'
-          Bitmap.Data = {
-            36040000424D3604000000000000360000002800000010000000100000000100
-            2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
-            FF00FFFFFF0036813C03337D3978FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF003A87419C37823DD2FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00429149905AA462FF58A15EFF37833EFF347E3AFF317A36FF2E7533FF2B71
-            2FEA286D2CB7256929702266261DFFFFFF00FFFFFF00FFFFFF00FFFFFF00499C
-            518462AC6AFF85C88DFF85C78BFF82C688FF7FC486FF7CC282FF79C180FF71B9
-            78FF5FA865FF49914EFF256A2AB023662739FFFFFF00FFFFFF00FFFFFF004DA1
-            568A66B06EFF8ACA92FF89CA90FF86C88DFF83C68AFF80C587FF7EC384FF7BC2
-            81FF6DBB74FF76BE7CFF59A05DFF266B2AB02367271DFFFFFF00FFFFFF00FFFF
-            FF004DA2569367B16FFF64AD6BFF43944BFF408F47FF3C8A43FF398540FF549D
-            5AFF74BA7AFF79C17FFF77BF7DFF4A914FFF266B2B70FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF004EA3579F4B9E53D2FFFFFF00FFFFFF00FFFFFF00FFFFFF003A86
-            408F36813CE275BB7BFF70BD77FF63AB69FF2A702EB7FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF0052A85B034FA3587BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF003A87418F61A867FF7BC282FF76BC7CFF2D7532EAFFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF003E8D458F64AB6BFF7FC486FF79BE81FF317A36EAFFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF004697
-            4E8F42924AE281C388FF7DC485FF6EB375FF357F3BB7FFFFFF00FFFFFF00FFFF
-            FF005FBA6AFF5CB667FF59B364FF56AE60FF53AA5DFF50A659FF4DA156FF68B1
-            70FF88C890FF8DCC95FF8BCB92FF5DA564FF38853F70FFFFFF00FFFFFF00FFFF
-            FF0062BE6DFFA5DAAEFFA2D8ACFFA1D8AAFF9ED6A7FF9CD5A5FF99D4A2FF97D2
-            9FFF8CCD95FF91CF99FF73B87BFF408F47B03C8A431DFFFFFF00FFFFFF00FFFF
-            FF0064C170FFA6DBB0FFA6DAAFFFA3D9ADFFA2D8ABFF9FD7A8FF9CD5A5FF94D0
-            9DFF83C58CFF6CB474FF479950B044944C39FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF0066C472FF64C270FF62BF6EFF60BC6BFF5DB868FF5BB565FF58B162FD55AC
-            5FEA52A85BB74FA358704B9F541DFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
-          }
-          ImageIndex = 42
         end
         object MenuItem70: TMenuItem
           Action = AcTerEnvCR
@@ -1558,46 +1518,6 @@ object frmPrincipal: TfrmPrincipal
             FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
             FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
           }
-        end
-        object MenuItem71: TMenuItem
-          Caption = 'Enviar CR+&LF'
-          Bitmap.Data = {
-            36040000424D3604000000000000360000002800000010000000100000000100
-            2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
-            FF00FFFFFF0036813C03337D3978FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF003A87419C37823DD2FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00429149905AA462FF58A15EFF37833EFF347E3AFF317A36FF2E7533FF2B71
-            2FEA286D2CB7256929702266261DFFFFFF00FFFFFF00FFFFFF00FFFFFF00499C
-            518462AC6AFF85C88DFF85C78BFF82C688FF7FC486FF7CC282FF79C180FF71B9
-            78FF5FA865FF49914EFF256A2AB023662739FFFFFF00FFFFFF00FFFFFF004DA1
-            568A66B06EFF8ACA92FF89CA90FF86C88DFF83C68AFF80C587FF7EC384FF7BC2
-            81FF6DBB74FF76BE7CFF59A05DFF266B2AB02367271DFFFFFF00FFFFFF00FFFF
-            FF004DA2569367B16FFF64AD6BFF43944BFF408F47FF3C8A43FF398540FF549D
-            5AFF74BA7AFF79C17FFF77BF7DFF4A914FFF266B2B70FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF004EA3579F4B9E53D2FFFFFF00FFFFFF00FFFFFF00FFFFFF003A86
-            408F36813CE275BB7BFF70BD77FF63AB69FF2A702EB7FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF0052A85B034FA3587BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF003A87418F61A867FF7BC282FF76BC7CFF2D7532EAFFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF003E8D458F64AB6BFF7FC486FF79BE81FF317A36EAFFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF004697
-            4E8F42924AE281C388FF7DC485FF6EB375FF357F3BB7FFFFFF00FFFFFF00FFFF
-            FF005FBA6AFF5CB667FF59B364FF56AE60FF53AA5DFF50A659FF4DA156FF68B1
-            70FF88C890FF8DCC95FF8BCB92FF5DA564FF38853F70FFFFFF00FFFFFF00FFFF
-            FF0062BE6DFFA5DAAEFFA2D8ACFFA1D8AAFF9ED6A7FF9CD5A5FF99D4A2FF97D2
-            9FFF8CCD95FF91CF99FF73B87BFF408F47B03C8A431DFFFFFF00FFFFFF00FFFF
-            FF0064C170FFA6DBB0FFA6DAAFFFA3D9ADFFA2D8ABFF9FD7A8FF9CD5A5FF94D0
-            9DFF83C58CFF6CB474FF479950B044944C39FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF0066C472FF64C270FF62BF6EFF60BC6BFF5DB868FF5BB565FF58B162FD55AC
-            5FEA52A85BB74FA358704B9F541DFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
-          }
-          ImageIndex = 42
         end
       end
     end
@@ -1694,15 +1614,15 @@ object frmPrincipal: TfrmPrincipal
     top = 24
     object AcArcSalir: TAction
       Category = 'Arc'
-      Caption = '&Salir'
+      Caption = '&Exit'
       Hint = 'Salir'
       ImageIndex = 7
       OnExecute = AcArcSalirExecute
     end
     object AcPCmEnvLin: TAction
       Category = 'Pcm'
-      Caption = 'Enviar &Línea'
-      Hint = 'Enviar línea actual'
+      Caption = 'Send &Line'
+      Hint = 'Send Current Line'
       ImageIndex = 31
       OnExecute = AcPCmEnvLinExecute
     end
@@ -1740,12 +1660,6 @@ object frmPrincipal: TfrmPrincipal
       Hint = 'Detecta el prompt actual'
       ImageIndex = 30
       OnExecute = AcTerDetPrmExecute
-    end
-    object AcTerConfig: TAction
-      Category = 'Ter'
-      Caption = 'Confi&gurar'
-      ImageIndex = 16
-      OnExecute = AcTerConfigExecute
     end
     object AcTerEnvCtrlC: TAction
       Category = 'Ter'
@@ -3368,7 +3282,7 @@ object frmPrincipal: TfrmPrincipal
       }
     end
     object MenuItem72: TMenuItem
-      Caption = '&Enviar'
+      Caption = '&Send'
       object MenuItem73: TMenuItem
         Action = AcTerEnvCtrlC
         Bitmap.Data = {
@@ -3407,46 +3321,6 @@ object frmPrincipal: TfrmPrincipal
           FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
           FF00FFFFFF00FFFFFF006360F80AFFFFFF00FFFFFF00FFFFFF00
         }
-      end
-      object MenuItem76: TMenuItem
-        Caption = 'Enviar &Enter'
-        Bitmap.Data = {
-          36040000424D3604000000000000360000002800000010000000100000000100
-          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
-          FF00FFFFFF0036813C03337D3978FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF003A87419C37823DD2FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00429149905AA462FF58A15EFF37833EFF347E3AFF317A36FF2E7533FF2B71
-          2FEA286D2CB7256929702266261DFFFFFF00FFFFFF00FFFFFF00FFFFFF00499C
-          518462AC6AFF85C88DFF85C78BFF82C688FF7FC486FF7CC282FF79C180FF71B9
-          78FF5FA865FF49914EFF256A2AB023662739FFFFFF00FFFFFF00FFFFFF004DA1
-          568A66B06EFF8ACA92FF89CA90FF86C88DFF83C68AFF80C587FF7EC384FF7BC2
-          81FF6DBB74FF76BE7CFF59A05DFF266B2AB02367271DFFFFFF00FFFFFF00FFFF
-          FF004DA2569367B16FFF64AD6BFF43944BFF408F47FF3C8A43FF398540FF549D
-          5AFF74BA7AFF79C17FFF77BF7DFF4A914FFF266B2B70FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF004EA3579F4B9E53D2FFFFFF00FFFFFF00FFFFFF00FFFFFF003A86
-          408F36813CE275BB7BFF70BD77FF63AB69FF2A702EB7FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF0052A85B034FA3587BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF003A87418F61A867FF7BC282FF76BC7CFF2D7532EAFFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF003E8D458F64AB6BFF7FC486FF79BE81FF317A36EAFFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF004697
-          4E8F42924AE281C388FF7DC485FF6EB375FF357F3BB7FFFFFF00FFFFFF00FFFF
-          FF005FBA6AFF5CB667FF59B364FF56AE60FF53AA5DFF50A659FF4DA156FF68B1
-          70FF88C890FF8DCC95FF8BCB92FF5DA564FF38853F70FFFFFF00FFFFFF00FFFF
-          FF0062BE6DFFA5DAAEFFA2D8ACFFA1D8AAFF9ED6A7FF9CD5A5FF99D4A2FF97D2
-          9FFF8CCD95FF91CF99FF73B87BFF408F47B03C8A431DFFFFFF00FFFFFF00FFFF
-          FF0064C170FFA6DBB0FFA6DAAFFFA3D9ADFFA2D8ABFF9FD7A8FF9CD5A5FF94D0
-          9DFF83C58CFF6CB474FF479950B044944C39FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF0066C472FF64C270FF62BF6EFF60BC6BFF5DB868FF5BB565FF58B162FD55AC
-          5FEA52A85BB74FA358704B9F541DFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
-        }
-        ImageIndex = 42
       end
       object MenuItem75: TMenuItem
         Action = AcTerEnvCR
@@ -3525,46 +3399,6 @@ object frmPrincipal: TfrmPrincipal
           FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
           FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
         }
-      end
-      object MenuItem74: TMenuItem
-        Caption = 'Enviar CR+&LF'
-        Bitmap.Data = {
-          36040000424D3604000000000000360000002800000010000000100000000100
-          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
-          FF00FFFFFF0036813C03337D3978FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF003A87419C37823DD2FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00429149905AA462FF58A15EFF37833EFF347E3AFF317A36FF2E7533FF2B71
-          2FEA286D2CB7256929702266261DFFFFFF00FFFFFF00FFFFFF00FFFFFF00499C
-          518462AC6AFF85C88DFF85C78BFF82C688FF7FC486FF7CC282FF79C180FF71B9
-          78FF5FA865FF49914EFF256A2AB023662739FFFFFF00FFFFFF00FFFFFF004DA1
-          568A66B06EFF8ACA92FF89CA90FF86C88DFF83C68AFF80C587FF7EC384FF7BC2
-          81FF6DBB74FF76BE7CFF59A05DFF266B2AB02367271DFFFFFF00FFFFFF00FFFF
-          FF004DA2569367B16FFF64AD6BFF43944BFF408F47FF3C8A43FF398540FF549D
-          5AFF74BA7AFF79C17FFF77BF7DFF4A914FFF266B2B70FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF004EA3579F4B9E53D2FFFFFF00FFFFFF00FFFFFF00FFFFFF003A86
-          408F36813CE275BB7BFF70BD77FF63AB69FF2A702EB7FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF0052A85B034FA3587BFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF003A87418F61A867FF7BC282FF76BC7CFF2D7532EAFFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF003E8D458F64AB6BFF7FC486FF79BE81FF317A36EAFFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF004697
-          4E8F42924AE281C388FF7DC485FF6EB375FF357F3BB7FFFFFF00FFFFFF00FFFF
-          FF005FBA6AFF5CB667FF59B364FF56AE60FF53AA5DFF50A659FF4DA156FF68B1
-          70FF88C890FF8DCC95FF8BCB92FF5DA564FF38853F70FFFFFF00FFFFFF00FFFF
-          FF0062BE6DFFA5DAAEFFA2D8ACFFA1D8AAFF9ED6A7FF9CD5A5FF99D4A2FF97D2
-          9FFF8CCD95FF91CF99FF73B87BFF408F47B03C8A431DFFFFFF00FFFFFF00FFFF
-          FF0064C170FFA6DBB0FFA6DAAFFFA3D9ADFFA2D8ABFF9FD7A8FF9CD5A5FF94D0
-          9DFF83C58CFF6CB474FF479950B044944C39FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF0066C472FF64C270FF62BF6EFF60BC6BFF5DB868FF5BB565FF58B162FD55AC
-          5FEA52A85BB74FA358704B9F541DFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
-        }
-        ImageIndex = 42
       end
     end
   end
